# jacdac-python

./: .gitignore  CHANGELOG.md  README.md  SUPPORT.md  devtools.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py
.github/workflows/: build.yml  release.yml
docs/: api.rst  conf.py  index.rst  requirements.txt  usage.rst
docs/source/: conf.py  index.rst  jacdac.accelerometer.rst  jacdac.arcade_gamepad.rst  jacdac.arcade_sound.rst  jacdac.azure_iot_hub_health.rst  jacdac.barcode_reader.rst  jacdac.barometer.rst  jacdac.bit_radio.rst  jacdac.braille_display.rst  jacdac.button.rst  jacdac.buzzer.rst  jacdac.capacitive_button.rst  jacdac.character_screen.rst  jacdac.codal_message_bus.rst  jacdac.color.rst  jacdac.compass.rst  jacdac.dimmer.rst  jacdac.distance.rst  jacdac.dmx.rst  jacdac.dot_matrix.rst  jacdac.e_co2.rst  jacdac.flex.rst  jacdac.gyroscope.rst  jacdac.heart_rate.rst  jacdac.hid_keyboard.rst  jacdac.hid_mouse.rst  jacdac.humidity.rst  jacdac.illuminance.rst  jacdac.indexed_screen.rst  jacdac.joystick.rst  jacdac.led.rst  jacdac.led_pixel.rst  jacdac.light_bulb.rst  jacdac.light_level.rst  jacdac.magnetometer.rst  jacdac.matrix_keypad.rst  jacdac.microphone.rst  jacdac.midi_output.rst  jacdac.model_runner.rst  (+42 more)
examples/: blink.py  blinky.py  button_smasher.py  fade.py  slidy_blinky.py  weather_to_csv.py
hf2/: hf2.py
jacdac/: README.md  README.rst  __init__.py  bus.py  config.py  constants.py  ctrl.py  devtools.py  events.py  jdconstants.py  pack.py  packet.py  sample.py  settings_file.py  taskq.py  transport.py  util.py
jacdac/accelerometer/: __init__.py  client.gpy  client.py  constants.py
jacdac/acidity/: __init__.py  client.py  constants.py
jacdac/air_pressure/: __init__.py  client.py  constants.py
jacdac/air_quality_index/: __init__.py  client.py  constants.py
jacdac/analog_measurement/: __init__.py  client.py  constants.py
jacdac/arcade_gamepad/: __init__.py  client.gpy  client.py  constants.py
jacdac/arcade_sound/: __init__.py  client.gpy  client.py  constants.py
jacdac/azure_iot_hub_health/: __init__.py  client.gpy  client.py  constants.py  server.py  test.py
jacdac/barcode_reader/: __init__.py  client.gpy  client.py  constants.py
jacdac/barometer/: __init__.py  client.gpy  client.py  constants.py  test.py
jacdac/base/: constants.py
jacdac/bit_radio/: __init__.py  client.gpy  client.py  constants.py
jacdac/bootloader/: constants.py
jacdac/braille_display/: __init__.py  client.gpy  client.py  constants.py
jacdac/bridge/: __init__.py  client.py  constants.py
jacdac/button/: __init__.py  client.gpy  client.py  client_base.py  client_mixin.py  constants.py  server.py  test.py
jacdac/buzzer/: __init__.py  client.gpy  client.py  constants.py
jacdac/capacitive_button/: __init__.py  client.gpy  client.py  constants.py
jacdac/character_screen/: __init__.py  client.gpy  client.py  constants.py
jacdac/cloud_adapter/: __init__.py  client.py  constants.py
jacdac/cloud_configuration/: __init__.py  client.py  constants.py
jacdac/codal_message_bus/: __init__.py  client.gpy  client.py  constants.py
jacdac/color/: __init__.py  client.gpy  client.py  constants.py
jacdac/compass/: __init__.py  client.gpy  client.py  constants.py
jacdac/control/: constants.py  server.py
jacdac/current_measurement/: __init__.py  client.py  constants.py
jacdac/d_ccurrent_measurement/: __init__.py  client.py  constants.py
jacdac/d_cvoltage_measurement/: __init__.py  client.py  constants.py
jacdac/dashboard/: __init__.py  client.py  constants.py
jacdac/dc_current_measurement/: __init__.py  client.py  constants.py
jacdac/dc_voltage_measurement/: __init__.py  client.py  constants.py
jacdac/device_script_condition/: __init__.py  client.py  constants.py
jacdac/device_script_manager/: __init__.py  client.py  constants.py
jacdac/devs_dbg/: constants.py
jacdac/devtools/: __init__.py  devtools.py
jacdac/dimmer/: __init__.py  client.gpy  client.py  constants.py
jacdac/distance/: __init__.py  client.gpy  client.py  constants.py
jacdac/dmx/: __init__.py  client.gpy  client.py  constants.py
jacdac/dot_matrix/: __init__.py  client.gpy  client.py  constants.py
jacdac/dual_motors/: __init__.py  client.py  constants.py
jacdac/e_co2/: __init__.py  client.gpy  client.py  constants.py
jacdac/examples/: blink.py  fade.py
jacdac/flex/: __init__.py  client.gpy  client.py  constants.py
jacdac/gamepad/: __init__.py  client.py  constants.py
jacdac/gpio/: __init__.py  client.py  constants.py
jacdac/gyroscope/: __init__.py  client.gpy  client.py  constants.py
jacdac/heart_rate/: __init__.py  client.gpy  client.py  constants.py
jacdac/hid_adapter/: __init__.py  client.gpy  client.py  constants.py
jacdac/hid_joystick/: __init__.py  client.py  constants.py
jacdac/hid_keyboard/: __init__.py  client.gpy  client.py  constants.py
jacdac/hid_mouse/: __init__.py  client.gpy  client.py  constants.py
jacdac/humidity/: __init__.py  client.gpy  client.py  constants.py
jacdac/i2c/: __init__.py  client.py  (+1 more)
scripts/: convfile.sh  devsetup.sh  devtools.sh  runpi.sh  watch.sh
(+298 files in other folders)
