[metadata]
name = jacdac
version = 0.0.1
description = Python packet for Microsoft Jacdac
license = MIT
keyboards = jacdac
author = Microsoft Corporation
url = https://microsoft.github.io/jacdac-docs/clients/python/

[semantic_release]
version_variable = jacdac/version.py:__version__
branch = main

[options]
packages = jacdac
install_requires =
    pyserial
