[metadata]
name = jacdac-python
description = Python client package for Microsoft Jacdac
license = MIT
long_description = file: jacdac/README.md
long_description_content_type = text/markdown
keyboards=
    jacdac
    embedded
    microcontroller
    sensor
author = Microsoft Corporation
url = https://microsoft.github.io/jacdac-docs/clients/python/
project_urls =
    Bug Tracker = https://github.com/microsoft/jacdac/issues
    Discussions = https://github.com/microsoft/jacdac/discussions
classifiers=
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: System :: Hardware
    Topic :: Software Development :: Embedded Systems

[semantic_release]
version_variable = setup.py:__version__
branch = main
python_requires = >=3.6

[options]
packages = jacdac
install_requires =
    pyserial
